--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -789,7 +789,7 @@ textarea.input {
   padding: 60px 0px;
   margin: 30px 0px;
   background-color: #E4E7ED;
-  background-image: url('../img/hotdeal.png');
+  background-image: url('../img/oferta_especial.png');
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -2187,4 +2187,9 @@ textarea.input {
     float: none;
     margin-top: 10px;
   }
+}
+
+/*Nuevos estilos*/
+.selec-categorias{
+	max-width: 150px;
 }
